--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "tsc": "tsc"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.7",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
